--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: echo "Running unit tests"
 
   build-and-push-ecr-image:
-    name: Continous Delivery
+    name: Continuous Delivery
     needs: integration
     runs-on: ubuntu-latest
     steps:
@@ -35,7 +35,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y jq unzip
 
-      - name: configure AWS credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -44,6 +44,4 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws/actions/amazon-ecr-login@v1
-
-
+        uses: aws-actions/amazon-ecr-login@v1  # Correct reference
