--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,11 @@ jobs:
 
       - name: Login to Amazon ECR
         id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1.1.0  # Corrected version
+        uses: aws-actions/amazon-ecr-login@v1.1.0
+
+      - name: Debug Login to ECR
+        run: |
+          echo "ECR_REGISTRY: $ECR_REGISTRY"
 
       - name: Build Docker Image
         id: build-image
@@ -53,9 +57,11 @@ jobs:
             ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
             IMAGE_TAG: latest
         run: |
-          ## build a docker container 
-          ## push it to AWS ECR so it can be deployed to EC2
-
+          echo "Building Docker image..."
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker images  # Debug step to confirm the image exists
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+      - name: Set IMAGE output
+        run: |
+          echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
