--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Debug Login to ECR
         run: |
-          echo "ECR_REGISTRY: $ECR_REGISTRY"
+          echo "ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}"
 
       - name: Build Docker Image
         id: build-image
@@ -63,8 +63,7 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Set IMAGE output
-        run: |
-          echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
+        run: echo "IMAGE=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_ENV
 
   Continous-Deployment:
     needs: build-and-push-ecr-image
@@ -84,13 +83,9 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1.1.0
 
-      - name: Pull latest images
+      - name: Pull latest image
         run: |
           docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
-
-      # - name: Stop and remove container if running
-      #   run: |
-      #     docker ps -q --filter "name=networksecurity" | grep -q . && docker stop mltest && docker rm -fv mltest
 
       - name: Run Docker Image to serve users
         run: |
@@ -98,7 +93,7 @@ jobs:
           -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' \
           -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' \
           -e 'AWS_REGION=${{ secrets.AWS_REGION }}' \
-          ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest 
+          ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
       - name: Clean previous images and containers
         run: |
